--- a/AboutMe/projects.html
+++ b/AboutMe/projects.html
@@ -26,7 +26,7 @@
             <h2>Take a look at my projects:</h2>
             <a href="https://helma1989.github.io/form/forms.html">Forms</a>
             <a href="https://helma1989.github.io/blog/blog.html">Blog</a>
-            <a href="#">Calculator</a>
+            <a href="https://helma1989.github.io/calculator/calculator.html">Calculator</a>
         </article>
     </div>
 </body>
